[package]
name = "nexara_quest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nexara_text_engine = { path = "../nexara_text_engine" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
