[package]
name = "nexara_text_engine"
version = "0.1.0"
edition = "2021"
description = "A game engine for text-based games."
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
crossterm = "0.27.0"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
